--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CleanSync</title>
+    <title>Riyadh Clean</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 512 512%22><rect width=%22512%22 height=%22512%22 rx=%22100%22 fill=%22%2316a34a%22/><text x=%2250%25%22 y=%2243%25%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-weight=%22900%22 font-size=%22130%22 fill=%22white%22>Riyadh</text><text x=%2250%25%22 y=%2272%25%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-weight=%22900%22 font-size=%22130%22 fill=%22white%22>clean</text></svg>" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body {
@@ -32,7 +33,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
