--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 512 512%22><rect width=%22512%22 height=%22512%22 rx=%22100%22 fill=%22%2316a34a%22/><text x=%2250%25%22 y=%2243%25%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-weight=%22900%22 font-size=%22130%22 fill=%22white%22>Riyadh</text><text x=%2250%25%22 y=%2272%25%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-weight=%22900%22 font-size=%22130%22 fill=%22white%22>clean</text></svg>" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      // Polyfill process.env to prevent crash in browser environments (Vercel/Vite)
+      // Polyfill process.env to prevent crash in browser environments
       window.process = window.process || { env: {} };
     </script>
     <style>
@@ -26,17 +26,16 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+    "react/": "https://esm.sh/react@^19.2.4/",
     "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
-    "firebase/app": "https://esm.sh/firebase@10.12.0/app",
-    "firebase/firestore": "https://esm.sh/firebase@10.12.0/firestore",
-    "firebase/": "https://esm.sh/firebase@10.12.0/"
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+    "firebase/": "https://esm.sh/firebase@^12.9.0/"
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
